# safetycompanion

./: .gitignore  README.md  plan.md  pyproject.toml  spec.md  tasks.md
configs/: exp_graph.yaml  exp_parser_odl.yaml  exp_parser_odl_hybrid.yaml  exp_parser_odl_local.yaml  exp_parser_odl_whitelist.yaml  exp_parser_odl_whitelist_hybrid.yaml  prod.yaml  project.yaml  route_field_priority.yaml
docs/: DOC_STATUS.md  README.md  abbreviation_route_spec.md  acceptance_criteria.md  cli_reference.md  compare_pairing_spec.md  compare_recommendation_guardrails.md  compare_regression_spec.md  compare_route_spec.md  data_contract.md  dummy_anchor_spec.md  dummy_anchor_spec_v2.md  dummy_grouping_refinement_spec.md  error_taxonomy_spec.md  event_paraphrase_alias_spec.md  evidence_policy.md  exact_anchor_normalization_spec.md  git_workflow.md  hard_negative_spec.md  hard_route_precision_spec.md  improvement_plan_v2.md  korean_query_normalization_spec.md  multi_page_dummy_hardset_spec.md  multi_page_grouping_spec.md  multi_page_grouping_spec_v3.md  multi_page_hardset_spec.md  multi_page_policy.md  ops_playbook.md  page_role_assignment_spec.md  page_title_disambiguation_spec.md  phase2_execution_guide.md  phase3_execution_guide.md  phase3b_execution_guide.md  phase3c_execution_guide.md  phase3d2_execution_guide.md  phase3d3_execution_guide.md  phase3d_execution_guide.md  rag_scope.md  route_corpus_isolation_v2.md  run_manifest.schema.json  (+4 more)
notebooks/: 01_parse_inspection.ipynb
refactoring/: 01_current_issues.md  02_target_structure.md  03_execution_plan.md  04_progress_log.md  (+1 more)
(+184 files in other folders)
